--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: fo_components
 description: A collection of Angular Dart components
 author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
-version: 0.0.1125
+version: 0.0.1132
 environment:
   sdk: '>=1.19.0 <2.0.0'
 dependencies:
@@ -11,11 +11,10 @@ dev_dependencies:
   browser: ^0.10.0
   dart_to_js_script_rewriter: ^1.0.1
 transformers:
-- angular2
-#
-#    platform_directives:
-#    - 'package:angular2/common.dart#COMMON_DIRECTIVES'
-#    platform_pipes:
-#    - 'package:angular2/common.dart#COMMON_PIPES'
-#    entry_points: web/main.dart
-#- dart_to_js_script_rewriter
+- angular2:
+    platform_directives:
+    - 'package:angular2/common.dart#COMMON_DIRECTIVES'
+    platform_pipes:
+    - 'package:angular2/common.dart#COMMON_PIPES'
+    entry_points: web/main.dart
+- dart_to_js_script_rewriter
