--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: fo_components
 description: A collection of Angular Dart components
 author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
-version: 0.0.1134
+version: 0.0.1137
 environment:
   sdk: '>=1.19.0 <2.0.0'
 dependencies:
@@ -17,4 +17,4 @@ transformers:
     platform_pipes:
     - 'package:angular2/common.dart#COMMON_PIPES'
     entry_points: web/main.dart
-- dart_to_js_script_rewriter
+#- dart_to_js_script_rewriter
