--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: fo_components
 description: A collection of Angular Dart components
 author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
-version: 0.0.1192
+version: 0.0.1201
 environment:
   sdk: '>=1.20.0 <2.0.0'
 dependencies:
@@ -17,4 +17,4 @@ transformers:
     - 'package:angular2/common.dart#COMMON_DIRECTIVES'
     platform_pipes:
     - 'package:angular2/common.dart#COMMON_PIPES'
-  # entry_points: web/main.dart
+    entry_points: web/main.dart
