--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,14 @@ name: fo_components
 description: A collection of Angular Dart components
 author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
-version: 0.0.1265
+version: 0.0.1285
 environment:
-  sdk: '>=1.19.0 <2.0.0'
+  sdk: '>=1.23.0 <2.0.0'
 dependencies:
-  angular2: "^3.0.0-alpha+1"
+  angular2: "^3.0.0"
 dev_dependencies:
-  browser: ^0.10.0
-  dart_to_js_script_rewriter: ^1.0.1
+  browser: ^0.10.0+2
+  dart_to_js_script_rewriter: ^1.0.2
 transformers:
 - angular2:
     platform_directives:
