--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies:
   angular2: ^3.1.0
   angular_components: "^0.5.2"
+  vi_auth_client:
+    path: ../ViAuthClient
 dev_dependencies:
   browser: ^0.10.0+2
   dart_to_js_script_rewriter: ^1.0.2
