--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,21 +2,17 @@ name: fo_components
 description: A collection of Angular Dart components
 author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
-version: 0.0.1451
+version: 0.0.1452
 environment:
-  sdk: '>=1.23.0 <2.0.0'
+  sdk: '>=1.24.2 <2.0.0'
+
 dependencies:
-  angular2: ^3.1.0
-  angular_components: "^0.5.2"
+  angular: "^4.0.0-beta"
+  angular_components: "^0.6.0-beta"
   vi_auth_client:
     path: ../ViAuthClient
-dev_dependencies:
-  browser: ^0.10.0+2
-  dart_to_js_script_rewriter: ^1.0.2
 
 transformers:
-- angular2:
-    platform_directives:
-    - 'package:angular2/common.dart#COMMON_DIRECTIVES'
-    platform_pipes:
-    - 'package:angular2/common.dart#COMMON_PIPES'
+  - angular
+
+#dev_dependencies:
