--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   angular: "^4.0.0"
   angular_components: "^0.6.0"
+  angular_router: "^1.0.2"
   vi_auth_client:
     path: ../ViAuthClient
 
@@ -16,7 +17,10 @@ dev_dependencies:
   browser: ^0.10.0+2
   dart_to_js_script_rewriter: ^1.0.3
 
-
 transformers:
 - angular
 - dart_to_js_script_rewriter
+
+web:
+  compiler:
+    debug: dartdevc
