scss ruby > dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,15 @@ environment:
 
 dependencies:
   angular: "^4.0.0"
-  angular_components: "^0.6.0"
+  angular_components: "^0.8.0"
   angular_router: "^1.0.2"
+  grid:
+    path: ../Grid
   vi_auth_client:
     path: ../ViAuthClient
 
 dev_dependencies:
-  browser: ^0.10.0+2
-  dart_to_js_script_rewriter: ^1.0.3
+  sass_builder: ^1.0.1
 
 transformers:
 - angular
-- dart_to_js_script_rewriter
-
-web:
-  compiler:
-    debug: dartdevc
