--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
 #    - dart: dev
 #      dart_task: dartfmt
     # Only care about being analyzer clean for dev and stable
-    - dart: dev
-      dart_task: dartanalyzer
+    #- dart: dev
+    #  dart_task: dartanalyzer
     - dart: stable
       dart_task: dartanalyzer
 
