--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,21 @@ author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
 version: 0.1.4
 environment:
-  sdk: '>=1.24.2 <2.0.0'
+  sdk: '>=2.0.0-dev.20.0 <2.0.0'
 
 dependencies:
-  angular: "^4.0.0+2"
-  angular_components: "^0.8.0"
-  angular_router: "^1.0.2"
+  angular: ^5.0.0-alpha+4
+  angular_components: ^0.9.0-alpha+3
+  build: '>=0.11.1 <0.13.0'
+  build_config: ^0.2.1
   grid:
-    git: git://github.com/afpatmin/Grid
+    path: ../grid
   vi_auth_client:
-    git: git://github.com/afpatmin/ViAuthClient
-  sass_builder: ^1.0.1
+    path: ../vi_auth_client
+  sass_builder: ^1.1.2
+
+dependency_overrides:
+  analyzer: ^0.31.0-alpha.2
 
 transformers:
 - sass_builder:
