--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,12 @@
 analyzer:
-   strong-mode: true
+  strong-mode: true
+  exclude:
+    - .dart_tool
+  plugins:
+    angular:
+      enabled: true
+  errors:
+    uri_has_not_been_generated: ignore
 
 linter:
   rules:
@@ -9,7 +16,7 @@ linter:
     - always_require_non_null_named_parameters
     - annotate_overrides
     - avoid_annotating_with_dynamic
-    - avoid_as
+    #- avoid_as
     - avoid_catches_without_on_clauses
     - avoid_catching_errors
     - avoid_classes_with_only_static_members
