--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,25 +2,17 @@ name: fo_components
 description: A collection of Angular Dart components
 author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
-version: 0.1.4
+version: 0.1.5
 environment:
-  sdk: '>=2.0.0-dev.20.0 <2.0.0'
+  sdk: '>=2.0.0-dev.44.0 <2.0.0'
 
 dependencies:
-  angular: ^5.0.0-alpha+4
-  angular_components: ^0.9.0-alpha+3
-  build: '>=0.11.1 <0.13.0'
-  build_config: ^0.2.1
+  angular: ^5.0.0-alpha+9
+  angular_components: ^0.9.0-alpha+9
+  angular_forms: ^2.0.0-alpha
+  fo_model:
+    git: https://github.com/afpatmin/fo_model.git
   grid:
-    path: ../grid
-  vi_auth_client:
-    path: ../vi_auth_client
-  sass_builder: ^1.1.2
-
-dependency_overrides:
-  analyzer: ^0.31.0-alpha.2
-
-transformers:
-- sass_builder:
-    outputExtension: .scss.css
-- angular
+    git: https://github.com/afpatmin/grid.git
+  vi_auth_client: ^0.1.0
+  sass_builder: ^1.1.5
