--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
 version: 0.1.5
 environment:
-  sdk: '>=2.0.0-dev.44.0 <2.0.0'
+  sdk: '>=2.0.0-dev.46.0 <2.0.0'
 
 dependencies:
-  angular: ^5.0.0-alpha+9
-  angular_components: ^0.9.0-alpha+9
-  angular_forms: ^2.0.0-alpha
+  angular: ^5.0.0-alpha+10
+  angular_components: ^0.9.0-alpha+10
+  angular_forms: ^2.0.0-alpha+2
   fo_model:
     git: https://github.com/afpatmin/fo_model.git
   grid:
