--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -55,7 +55,7 @@ linter:
     - literal_only_boolean_expressions
     - no_adjacent_strings_in_list
     - no_duplicate_case_values
-    - non_constant_identifier_names
+    #- non_constant_identifier_names
     - omit_local_variable_types
     - one_member_abstracts
     - only_throw_errors
