--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   angular: ^5.0.0-alpha+11
   angular_components: ^0.9.0-alpha+11
   angular_forms: ^2.0.0-alpha+3
+  angular_router: ^2.0.0-alpha+11
   fo_model:
     git: https://github.com/afpatmin/fo_model.git
   grid:
