--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ environment:
   sdk: '>=2.0.0-dev.63.0 <2.0.0'
 
 dependencies:
-  angular: ^5.0.0-alpha+15
-  angular_components: ^0.9.0-alpha+15
-  angular_forms: ^2.0.0-alpha+7
-  angular_router: ^2.0.0-alpha+14
+  angular: 5.0.0-alpha+14
+  angular_components: 0.9.0-alpha+14
+  angular_forms: 2.0.0-alpha+6
+  angular_router: ^2.0.0-alpha+13
   fo_model:
     git: https://github.com/afpatmin/fo_model.git
   grid:
