--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,20 @@ author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
 version: 0.1.6
 environment:
-  sdk: '>=2.0.0-dev.61.0 <2.0.0'
+  sdk: '>=2.0.0-dev.65.0 <2.0.0'
 
 dependencies:
-  angular: 5.0.0-alpha+15
-  angular_components: 0.9.0-alpha+15
-  angular_forms: 2.0.0-alpha+7
-  angular_router: ^2.0.0-alpha+14
+  angular: 5.0.0-beta
+  angular_components: 0.9.0-beta
+  angular_forms: 2.0.0-beta
+  angular_router: ^2.0.0-alpha+15
   fo_model:
     git: https://github.com/afpatmin/fo_model.git
   grid:
     git: https://github.com/afpatmin/grid.git
   intl: ^0.15.6
   vi_auth_client: ^0.1.2
-  sass_builder: ^2.0.3
+  sass_builder: ^2.1.0
 
 dev_dependencies:
   build_runner: ^0.9.1
