--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,9 @@ environment:
   sdk: '>=2.0.0-dev.65.0 <2.0.0'
 
 dependencies:
-  angular: 5.0.0-beta+1
+  angular: 5.0.0-beta
   angular_components: 0.9.0-beta
-  angular_forms: 2.0.0-beta+1
+  angular_forms: 2.0.0-beta
   angular_router: ^2.0.0-alpha+16
   fo_model:
     git: https://github.com/afpatmin/fo_model.git
