--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,21 +4,21 @@ author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
 version: 0.1.6
 environment:
-  sdk: '>=2.0.0-dev.65.0 <2.0.0'
+  sdk: '>=2.0.0-dev.65.0 <3.0.0'
 
 dependencies:
-  angular: ^5.0.0-beta+1
-  angular_components: ^0.9.0-beta
-  angular_forms: ^2.0.0-beta+1
-  angular_router: ^2.0.0-alpha+16
+  angular: ^5.0.0-beta+2
+  angular_components: ^0.9.0-beta+1
+  angular_forms: ^2.0.0-beta+2
+  angular_router: ^2.0.0-alpha+17
   fo_model:
     git: https://github.com/afpatmin/fo_model.git
   grid:
     git: https://github.com/afpatmin/grid.git
-  intl: ^0.15.6
+  intl: ^0.15.7
   vi_auth_client: ^0.1.2
-  sass_builder: ^2.1.0
 
 dev_dependencies:
-  build_runner: ^0.9.1
-  json_serializable: ^0.5.8
+  sass_builder: ^2.1.1
+  build_runner: ^0.9.2
+  json_serializable: ^0.5.8+1
