--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   grid:
     git: https://github.com/afpatmin/grid.git
   intl: ^0.15.7
+  json_annotation: ^0.2.9+1
   vi_auth_client: ^0.1.2
 
 dev_dependencies:
