--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin
 version: 0.1.7
 environment:
-  sdk: '>=2.0.0-dev.65.0 <3.0.0'
+  sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
-  angular: ^5.0.0-beta+3
-  angular_components: ^0.9.0-beta+3
-  angular_forms: ^2.0.0-beta+3
-  angular_router: ^2.0.0-alpha+18
+  angular: ^5.0.0
+  angular_components: ^0.9.0
+  angular_forms: ^2.0.0
+  angular_router: ^2.0.0-alpha+19
   fo_model:
     git: https://github.com/afpatmin/fo_model.git
   grid:
