--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,12 @@ dependencies:
   angular_forms: ^2.0.0
   angular_router: ^2.0.0-alpha+19
   fo_model:
-    git: https://github.com/afpatmin/fo_model.git
+    git: https://github.com/afpatmin/fo_model
   grid:
-    git: https://github.com/afpatmin/grid.git
+    git: https://github.com/afpatmin/grid
   intl: ^0.15.7  
   vi_auth_client: ^0.1.3
   sass_builder: ^2.1.1
 
 dev_dependencies:
-  build_runner: ^0.10.0
+  build_runner: ^0.10.2
