--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ environment:
   sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
-  angular: ^5.0.0
+  angular: ^5.1.0
   angular_components: ^0.9.2
-  angular_forms: ^2.0.0
-  angular_router: ^2.0.0-alpha+19
+  angular_forms: ^2.1.0
+  angular_router: ^2.0.0-alpha+20
   fo_model:
     git: https://github.com/afpatmin/fo_model
   grid:
@@ -19,5 +19,5 @@ dependencies:
   vi_auth_client: ^0.1.3
   sass_builder: ^2.1.1
 
-dev_dependencies:
-  build_runner: ^0.10.2
+dependency_overrides:
+  build: ^1.0.1
