--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -85,7 +85,7 @@ linter:
     - prefer_typing_uninitialized_variables
     - recursive_getters
     - slash_for_doc_comments
-    - sort_constructors_first
+    #- sort_constructors_first
     - sort_unnamed_constructors_first
     - super_goes_last
     - test_types_in_equals
