--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,18 @@ dependencies:
   angular: ^5.2.0
   angular_components: ^0.11.0
   angular_forms: ^2.1.1
-  angular_router: ^2.0.0-alpha+21
+  angular_router: ^2.0.0-alpha+21  
   fo_model:
     git: https://github.com/afpatmin/fo_model
   grid:
     git: https://github.com/afpatmin/grid
-  intl: ^0.15.7    
+  intl: ^0.15.7
   sass_builder: ^2.1.2
+
+dev_dependencies:
+  build_runner: ^1.2.5
+  json_serializable: ^2.0.2
+  json_annotation: ^2.0.0
+
+dependency_overrides:
+  analyzer: ^0.35.0
