--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,12 @@ dependencies:
   angular_components: ^0.12.0
   angular_forms: ^2.1.1
   angular_router: ^2.0.0-alpha+21    
+  collection: ^1.14.11
   grid_css: 0.1.1
   intl: ^0.15.7
+  json_annotation: ^2.0.0
   sass_builder: ^2.1.2
 
 dev_dependencies:
   build_runner: ^1.2.0
   json_serializable: ^2.0.2
-  json_annotation: ^2.0.0
