--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   angular_forms: ^2.1.1
   angular_router: ^2.0.0-alpha+21    
   collection: ^1.14.11
-  grid_css: 0.1.1
+  grid_css: ^0.1.1
   intl: ^0.15.7
   json_annotation: ^2.0.0
   sass_builder: ^2.1.2
