--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: fo_components
 description: A collection of Angular components for both common and less common use cases.
 author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin/fo_components
-version: 0.2.2+3
+version: 1.0.0
 environment:
   sdk: '>=2.2.0 <3.0.0'  
 
