--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,9 +2,9 @@ name: fo_components
 description: A collection of Angular components for both common and less common use cases.
 author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin/fo_components
-version: 1.1.2
+version: 1.1.2+1
 environment:
-  sdk: '>=2.2.0 <3.0.0'  
+  sdk: '>=2.3.0-dev.0.1 <3.0.0'  
 
 dependencies:
   angular: ^5.3.0
