--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ author: Patrick Minogue <patrick.minogue@gmail.com>
 homepage: https://github.com/afpatmin/fo_components
 version: 1.1.2+1
 environment:
-  sdk: '>=2.3.0-dev.0.1 <3.0.0'  
+  sdk: '>=2.2.0 <3.0.0'  
 
 dependencies:
   angular: ^5.3.0
