--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,15 @@ environment:
   sdk: '>=2.2.0 <3.0.0'  
 
 dependencies:
-  angular: ^5.3.0
-  angular_components: ^0.13.0
-  angular_forms: ^2.1.1
+  angular: ^6.0.0-alpha
+  angular_components: ^0.14.0-alpha
+  angular_forms: ^2.1.3
   collection: ^1.14.11
   grid_css: ^0.1.1
   intl: ^0.15.8
-  json_annotation: ^2.0.0
-  sass_builder: ^2.1.2
+  json_annotation: ^2.4.0
+  sass_builder: ^2.1.3
 
 dev_dependencies:
-  build_runner: ^1.2.0
-  json_serializable: ^2.0.2
+  build_runner: ^1.5.0
+  json_serializable: ^3.0.0
