--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fo_components
 description: A collection of Angular components for both common and less common use cases.
 homepage: https://github.com/afpatmin/fo_components
-version: 1.7.6+4
+version: 1.7.7
 environment:
   sdk: '>=2.2.0 <3.0.0'
 
@@ -16,5 +16,5 @@ dependencies:
   sass_builder: ^2.1.3
 
 dev_dependencies:
-  build_runner: ^1.7.2
+  build_runner: ^1.8.0
   json_serializable: ^3.2.2
