--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fo_components
 description: A collection of Angular components for both common and less common use cases.
 homepage: https://github.com/afpatmin/fo_components
-version: 1.8.1
+version: 1.8.1+1
 environment:
   sdk: '>=2.2.0 <3.0.0'
 
@@ -10,7 +10,7 @@ dependencies:
   angular_components: ^0.14.0-alpha
   angular_forms: ^2.1.3
   collection: ^1.14.11
-  grid_css: ^1.0.1
+  grid_css: ^2.0.0
   intl: ^0.15.8  
   json_annotation: ^3.0.0
   sass_builder: ^2.1.3
