--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fo_components
 description: A collection of Angular components for both common and less common use cases.
 homepage: https://github.com/afpatmin/fo_components
-version: 1.9.1+4
+version: 1.10.0
 environment:
   sdk: '>=2.2.0 <3.0.0'
 
