--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: fo_components
 description: A collection of Angular components for both common and less common use cases.
 homepage: https://github.com/afpatmin/fo_components
-version: 1.10.4+2
+version: 2.0.0
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: '>=2.10.1 <3.0.0'
 
 dependencies:
-  angular: ^6.0.0-alpha
-  angular_components: ^0.14.0-alpha
-  angular_forms: ^2.1.3
-  collection: ^1.14.11
-  grid_css: ^2.0.0
-  intl: ^0.15.8  
-  json_annotation: ^3.0.0
+  angular: ^6.0.0
+  angular_components: ^1.0.1
+  angular_forms: ^3.0.0
+  collection: ^1.14.13
+  grid_css: ^2.0.1
+  intl: ^0.16.1
+  json_annotation: ^3.1.0
   sass_builder: ^2.1.3
 
 dev_dependencies:
-  build_runner: ^1.8.0
-  json_serializable: ^3.2.2
+  build_runner: ^1.10.2
+  json_serializable: ^3.5.0
