--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,16 @@ dependencies:
   angular: ^6.0.1
   angular_components: ^1.0.1
   angular_forms: ^3.0.0
-  collection: ^1.14.13
+  collection: ^1.15.0
   grid_css: ^2.0.1
-  intl: ^0.16.1
-  json_annotation: ^3.1.0
+  intl: ^0.17.0
+  json_annotation: ^4.0.0
   sass_builder: ^2.1.3
 
 dev_dependencies:
-  build_runner: ^1.10.2
-  json_serializable: ^3.5.0
+  build_runner: ^1.11.1
+  json_serializable: ^4.0.0
+
+dependency_overrides: 
+  intl: ^0.17.0
+  analyzer: ^0.40.0
