--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fo_components
 description: A collection of Angular components for both common and less common use cases.
 homepage: https://github.com/afpatmin/fo_components
-version: 2.0.1+1
+version: 2.1.0
 environment:
   sdk: '>=2.10.1 <3.0.0'
 
