--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   angular: ^7.0.0
+  angular_forms: ^4.0.0
   collection: ^1.15.0
   grid_css: ^3.0.0
   intl: ^0.17.0
