--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,20 @@ environment:
 
 dependencies:
   angular: ^7.0.2
+  angular_bloc: ^7.1.0
   angular_forms: ^4.0.1
   collection: ^1.15.0
+  copy_with_extension: ^2.0.2
+  equatable: ^2.0.3
   grid_css: ^3.0.0
   intl: ^0.17.0
   json_annotation: ^4.1.0
   sass_builder: ^2.1.4
 
 dev_dependencies:
+  bloc_test: ^8.3.0
   build_runner: ^2.1.4
+  copy_with_extension_gen: ^2.0.2
   json_serializable: ^5.0.2
   lints: ^1.0.1
+  test: ^1.18.2
