--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: fo_components
 description: A collection of AngularDart components for common use cases;
   buttons, text input, dropdown select etc.
 homepage: https://github.com/afpatmin/fo_components
-version: 3.1.3+4
+version: 3.2.0
 environment:
   sdk: ">=2.13.0 <3.0.0"
 
@@ -12,7 +12,7 @@ dependencies:
   angular_forms: ^4.0.1
   bloc: ^7.2.1
   collection: ^1.15.0
-  copy_with_extension: ^2.0.2
+  copy_with_extension: ^4.0.0
   dnd: ^2.0.1
   equatable: ^2.0.3
   intl: ^0.17.0
@@ -22,7 +22,7 @@ dependencies:
 dev_dependencies:
   bloc_test: ^8.3.0
   build_runner: ^2.1.4
-  copy_with_extension_gen: ^2.0.2
+  copy_with_extension_gen: ^4.0.0
   json_serializable: ^5.0.2
   lints: ^1.0.1
   test: ^1.18.2
