--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,22 +7,22 @@ environment:
   sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
-  angular: ^7.0.2
-  angular_bloc: ^8.0.0
-  angular_forms: ^4.0.1
-  bloc: ^8.1.0
-  collection: ^1.17.0
+  angular_bloc: ^9.0.0
+  bloc: ^8.1.1
+  collection: ^1.17.1
   copy_with_extension: ^5.0.0
   dnd: ^2.0.1
   equatable: ^2.0.5
   intl: ^0.17.0
-  json_annotation: ^4.1.0
+  json_annotation: ^4.7.0
+  ngdart: ^7.1.1
+  ngforms: ^4.1.1
   sass_builder: ^2.2.1
 
 dev_dependencies:
-  bloc_test: ^9.1.0
-  build_runner: ^2.1.4
+  bloc_test: ^9.1.1
+  build_runner: ^2.3.3
   copy_with_extension_gen: ^5.0.0
-  json_serializable: ^5.0.2
+  json_serializable: ^6.5.4
   lints: ^2.0.1
-  test: ^1.18.2
+  test: ^1.23.1
